# fastaar-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
fastaar/: __init__.py  client.py  exceptions.py  signature.py
tests/: __init__.py  test_client.py  test_signature.py
